--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,11 +1,9 @@
 :root {
-    --bar-color: linear-gradient(to right, #231a60 0%, #3c338d 51%, #231a60 100%);
-    --background-color: #f5f5f5;
+    --bar-color: linear-gradient(to right, #601a1a 0%, #ad5858 51%, #601a1a 100%);
     --font-roboto: "Roboto", sans-serif;
     --link-color: #fff;
-    --hover-color: #3fcaff;
+    --hover-color: #ff3f3f;
     --border-menu: 1px solid rgba(255, 255, 255, 0.1);
-    --background: url(../img/background.webp);
 }
 
 html {
@@ -15,11 +13,11 @@ html {
 body {
     font-family: var(--font-roboto);
     font-size: 14px;
-    background: var(--background);
     margin: 0;
     line-height: 24px;
     color: #777777;
     font-weight: 500;
+    background: var(--bar-color);
 }
 
 a {
@@ -69,14 +67,6 @@ a {
     box-sizing: border-box;
 }
 
-.logo {
-    margin-right: 30px;
-}
-
-.logo-image {
-    border-style: none;
-}
-
 .menu {
     display: flex !important;
     flex-grow: 1;
@@ -124,7 +114,7 @@ a {
     border: solid 1px black;
     border-radius: 20px;
     margin: 1rem 0 0 0;
-    background: linear-gradient(to right, #412fb7, #231a60);
+    background: var(--hover-color);
     color: greenyellow;
     display: flex;
     align-content: center;
@@ -162,7 +152,7 @@ a {
 }
 
 .table-players tr:nth-child(even) {
-    background-color: #6843cc;
+    background-color: #cc4343;
 }
 
 .table-players tr:hover {
@@ -170,7 +160,7 @@ a {
 }
 
 .table-players th {
-    background-color: #412fb7;
+    background-color: #b72f2f;
     color: white;
 }
 
@@ -220,70 +210,42 @@ a {
     margin-right: 5px;
 }
 
-.description a,
-.footer a {
-    color: var(--link-color);
-}
-
-.description a:hover,
-.footer a:hover {
-    color: var(--hover-color);
-}
-
-.footer {
-    margin-top: 0.5rem;
-    padding: 1rem 0;
-    border-top: var(--border-menu);
-    background: var(--bar-color);
-    display: flex;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-.footer p {
-    margin: 0;
-    color: var(--link-color);
-    font-size: 12px;
-    padding-left: 1rem;
-}
-
 #turnText {
     text-align: center;
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
-  }
-  
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    border-radius: 10px;
-  }
-   
-  ::-webkit-scrollbar-thumb {
-    background: var(--bar-color); 
-    border-radius: 100%;
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background: var(--hover-color); 
-  }
+width: 5px;
+}
 
-  .github {
-      margin-left: auto;
-      margin-right: 1rem;
-  }
+::-webkit-scrollbar-track {
+box-shadow: inset 0 0 5px grey; 
+border-radius: 10px;
+}
 
-  .fas {
-      margin-left: 1rem;
-      cursor: pointer;
-  }
+::-webkit-scrollbar-thumb {
+background: var(--bar-color); 
+border-radius: 100%;
+}
 
-  #message-body {
-      color: greenyellow;
-  }
+::-webkit-scrollbar-thumb:hover {
+background: var(--hover-color); 
+}
 
-  #message-modal-content {
-      min-width: 25rem;
-  }
+.github {
+    margin-left: auto;
+    margin-right: 1rem;
+}
+
+.fas {
+    margin-left: 1rem;
+    cursor: pointer;
+}
+
+#message-body {
+    color: greenyellow;
+}
+
+#message-modal-content {
+    min-width: 25rem;
+}
